# spatial_gp

./: CMakeLists.txt  README.md  main.m  salinity_slice.txt  salinity_slice_after.txt  temperature_slice.txt  visualize.m
MATLAB/: main.m  pos2dist.m  soundspeed.m
data/: PS111_CTD.mat  PS111_CTD.tab
include/: Data.h  Dynamic.h  GaussianProcess.h  Grid.h  KernelTuning.h  Typedefs.h
src/: estimator.cpp  moving.cpp
